# Hackathon2020

./: .gitmodules  README.md  package.json
Data/: README.md  Tianjin 125 cases (updated Feb 17).xlsx  Tianjin cluster cases (Feb 13).xlsx  description accessing Tianjin data.docx
EpidemicDynamics/: README.md
Estimation/: README.md  incubation.Rmd
Estimation/Louis and Sonny/: Team Severity_Louis and Sonny.Rmd  cfr_dataset.csv
FlightsTeam/SimultaneusTransportationSEIRModel/: model.hpp
FlightsTeam/SimultaneusTransportationSIRModel/: csv_read.hpp
Forecasting/: README.md
Forecasting/Multiple_R0_Analysis/: Multiple_R0_Analysis.ipynb  README.md
Genomics/: README.md  References  References.bib  extracting_specific_viruses_from_fasta.py  fasta_dif.py  fasta_id_fetch.py  fasttree_97_mers.tree  fasttree_97_sars.tree  fasttree_SARSCOV2_97.tree  reduced_mers.fasta  reduced_mers_aligned.fasta  reduced_mers_aligned_97.fasta  reduced_sars.fasta  reduced_sars_97_aligned.fasta  reduced_sars_aligned.fasta  remove_duplicates.py
Genomics/Alignment/: README.md
Modelling/: JS_imperial_analysis.Rmd  JS_imperial_analysis.html  README.md  cc_Wuetal.Rmd  cc_Wuetal.html  wu_lancet_supplement-Table1.csv
OutbreakModel/: README.md
OutbreakParameters/: README.md  incubation.html
Sequences/: README.md
Team Flight/: Readme.md
Team Flight/Data/: README.md
Team Flight/Data/flirt.eha.io/: README.md  client.js  fetch.js  helpers.js  index.js  requirements.txt  writer.py
Team Flight/SimultaneusTransportationSIRModel/: CMakeLists.txt  csv_read.cpp  main.cpp  model.cpp  model.hpp
(+6 files in other folders)
